--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -37,55 +37,16 @@
   }
 }
 
-// About Ipad
-.ipad {
+// Home page presentcard
+.presentcard {
   background: url(/apple_store/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  height: 60vh;
-  min-width: 30vw;
+  min-height: 40vh;
   align-items: center;
   justify-content: center;
-
-  
-  .content {
-    margin-top: 150px;
-    padding-left: 365px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-    ul li {
-      list-style: none;
-      display: inline;
-      
-      a {
-        padding: 1.5rem;
-        margin-bottom: 5rem;
-        font-size: 2rem;
-        color: #06c;
-        letter-spacing: inherit;
-      }
-    }
-  }
-}
-@media (min-width: 297.98px) and (max-width: 767.98px) {
-  .ipad {
-    height: 10vh;
-    min-width: 20vw;
-  }
-}
-
-// About presentcard
-.presentcard {
-  background: url(/apple_store/images/home_images/h3.png) no-repeat;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  min-height: 60vh;
-  align-items: center;
-  justify-content: center;
+  margin-top: 2rem;
 
   .content {
     margin-top: 30rem;
@@ -105,13 +66,56 @@
     }
   }
 
-  // @media (min-width: 297.98px) and (max-width: 767.98px) {
-  //   padding: 3rem 1rem;
-  //   .s1 {
-  //     font-size: 5vw;
-  //     margin: 3rem;
-  //   }
-  // }
+}
+
+// Home page Ipad
+.about_ipad {
+  background: url(/apple_store/images/home_images/h3.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  height: 60vh;
+  min-width: 30vw;
+  align-items: center;
+  justify-content: center;
+
+  
+  .content_right {
+    margin-top: 10rem;
+    padding-left: 365px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    ul li {
+      list-style: none;
+      display: inline;
+      
+      a {
+        padding: 1.5rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+}
+
+// Home page gallery grid
+.gallery .box-container {
+  columns: 2 37rem;
+  column-gap: 1.5rem;
+
+  .box-gallery {
+    margin-bottom: 0.8rem;
+    break-inside: avoid;
+
+    img {
+      width: 100%;
+      margin-bottom: 0.8rem;
+    }
+  }
 }
 
 // Mac home img
