--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -19,40 +19,10 @@
     flex: 1 1 42rem;
     margin-bottom: 5rem;
 
-    
-    // @media (min-width: 297.98px) and (max-width: 767.98px) {
-    //   .price {
-    //     display: block;
-    //     margin: 2rem;
-    //     font-size: 1.5rem;
-    //   }
-    // }
-    // @media (min-width: 767.98px) and (max-width: 1046.98px) {
-    //   .price {
-    //     font-size: 1.6rem;
-    //   }
-    // }
-
     .price {
       margin-left: 0;
       font-weight: 600;
       text-decoration: underline;
-    }
-  }
-}
-
-// Gallery
-.gallery .box-container {
-  columns: 2 40rem;
-  column-gap: 1.5rem;
-
-  .box-gallery {
-    margin-bottom: 0.8rem;
-    break-inside: avoid;
-
-    img {
-      width: 100%;
-      margin-bottom: 0.8rem;
     }
   }
 }
@@ -67,7 +37,7 @@
   margin-left: 2rem;
   margin-right: 2rem;
   margin-top: 2rem;
-  
+
   column-gap: 1.5rem;
 
   .box-gallery-mac {
@@ -84,8 +54,7 @@
 
 // Mac page big center image
 
-.gallery-center-image 
-.box-container-center-image {
+.gallery-center-image .box-container-center-image {
   margin-top: 2rem;
   columns: 1 80rem;
   column-gap: 1.5rem;
@@ -102,11 +71,9 @@
   }
 }
 
-
 // Mac page long image bottom
 
-.gallery-long-image 
-.box-container-long-image {
+.gallery-long-image .box-container-long-image {
   margin-top: 2rem;
   columns: 1 80rem;
   column-gap: 1.5rem;
@@ -123,42 +90,41 @@
   }
 }
 
-
 // Information boxes mac page
-.mac_info-box{
+.mac_info-box {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin: 3rem;
 
-  .mac-info{
+  .mac-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 5rem;
 
-    .fa-box-open, 
-    .fa-comments{
+    .fa-box-open,
+    .fa-comments {
       font-size: 5em;
       margin-bottom: 2rem;
     }
 
-    h4{
+    h4 {
       font-size: 2.5rem;
       font-weight: 400;
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       padding: 0 4rem;
     }
 
-    p{
+    p {
       font-size: 2rem;
       font-weight: 300;
       margin-bottom: 1rem;
       padding: 0 5rem;
     }
 
-    .link-info{
+    .link-info {
       list-style: none;
       font-size: 2rem;
       font-weight: 300;
@@ -167,15 +133,47 @@
     }
   }
 }
-
-.big_text{
+// Big text stylings 
+.big_text {
   font-size: 3.5rem;
   font-weight: 800;
   margin: 8rem 0 5rem;
 }
 
-.big_text_xl{
+.big_text_xl {
   font-size: 5.5rem;
   font-weight: 800;
   margin: 8rem 0 5rem;
+}
+
+.big_text_x {
+  font-size: 5.5rem;
+  font-weight: 800;
+  margin: 8rem 0 0;
+}
+
+.big_text_xl_light {
+  font-size: 5.5rem;
+  font-weight: 800;
+  color: white;
+}
+
+// paragraf text styles
+
+.text_light {
+  color: white;
+  font-size: 2rem;
+  font-weight: 300;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 0 5rem;
+}
+
+.text_dark{
+  color: black;
+  font-size: 3rem;
+  font-weight: 300;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 0 5rem;
 }
