--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -68,10 +68,10 @@ table{
             }
         }
     }
-    tbody{
+    // tbody{
 
-    }
-    tfoot{
+    // }
+    // tfoot{
 
-    }
+    // }
 }
